2012-02-24  Andrew MacLeod  <amacleod@redhat.com>

	* gcc.dg/simulate-thread/simulate-thread.gdb: Use return value from
	simulate_thread_wrapper_other_threads
	* gcc.dg/simulate-thread/atomic-load-int128.c (simulate_thread_main):
	Move initialization of 'value' to main().
	(main): Initialize 'value';
	* gcc.dg/simulate-thread/speculative-store.c
	(simulate_thread_step_verify): Return 0 when successful.
	* gcc.dg/simulate-thread/simulate-thread.h (HOSTILE_THREAD_THRESHOLD):
	Reduce threshold.
	(INSN_COUNT_THRESHOLD): New.  Instruction limit to terminate test.
	(simulate_thread_wrapper_other_threads): Return a success/fail value
	and issue an error if the instruction count threshold is exceeded.

2012-02-24  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR target/50580
	* gcc.target/mips/interrupt_handler-2.c: Skip on mips-sgi-irix6*.
	* gcc.target/mips/interrupt_handler-3.c: Likewise.

2012-02-24  Richard Guenther  <rguenther@suse.de>

	PR middle-end/52355
	* gcc.dg/pr52355.c: New testcase.

2012-02-23  Kai Tietz  <ktietz@redhat.com>

	* gcc.dg/pack-test-5.c: Add -mno-ms-bitfields option
	for mingw-targets.
	* gcc.dg/Wpadded.c: Likewise.
	* gcc.dg/bf-ms-layout-2.c: Adjust offsets to fit ms-bitfield
	structure-layout.
	* gcc.dg/di-sync-multithread.c: Replace for mingw-target the use
	for sleep by Sleep and add windows.h include for this function.
	* gcc.dg/format/dfp-printf-1.c: Adjust dg-skip-if rule for mingw
	targets.
	* gcc.dg/stack-usage-1.c (SIZE): Provide proper SIZE for x64 mingw
	target.
	* gcc.dg/tls/thr-cse-1.c: Provide proper pattern for x64 mingw
	target.
	* gcc.dg/tls/opt-11.c (memset): Use __extension__ to avoid fail
	on x64 mingw target.
	* gcc.dg/bf-ms-attrib.c: Adjust expected size for ms_struct layout.
	* gcc.dg/pr50251.c: Disable test for x64 mingw target.
	* gcc.c-torture/execute/930930-1.c (long): Replace by ptr_t to avoid
	failure on LLP64 target.

2012-02-23  Uros Bizjak  <ubizjak@gmail.com>

	PR c/52290